fix overflowing names on mobile

--- a/wouldyou/assets/sass/pages/_game.scss
+++ b/wouldyou/assets/sass/pages/_game.scss
@@ -275,7 +275,7 @@ body.game {
     }
 
     .game-action {
-      padding: 40px 0 10px;
+      padding: 70px 0 5px;
 
       .verb-btn {
         padding-top: 10px;
