--- a/wouldyou/static/wouldyou/css/app.css
+++ b/wouldyou/static/wouldyou/css/app.css
@@ -2753,7 +2753,7 @@ body.game .undo-btn i {
     margin: 4px 0 0 0;
   }
   body.game .game-action {
-    padding: 40px 0 10px;
+    padding: 70px 0 5px;
   }
   body.game .game-action .verb-btn {
     padding-top: 10px;
